--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
+/dist
+/classes
+/checkouts
+/target
 pom.xml
 pom.xml.asc
-*jar
-/lib/
-/classes/
-/target/
-/checkouts/
-.lein-deps-sum
-.lein-repl-history
-.lein-plugins/
-.lein-failures
+*.jar
+*.class
+/.lein-*
+/.nrepl-port
