--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marcandregoyette.com",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Personal website of Marc-André Goyette",
   "main": "sass/styles.scss",
   "repository": {
@@ -17,13 +17,12 @@
     "css-build": "node-sass --output-style compressed --omit-source-map-url sass/styles.scss resources/public/styles/styles.css",
     "css-watch": "npm run css-build -- --watch",
     "start": "npm run css-watch",
-    "format-html-and-xml": "node scripts/format-html-and-xml.js"
+    "format-html": "node scripts/format-html.js"
   },
   "devDependencies": {
     "bulma": "0.7.5",
     "glob": "7.1.4",
     "js-beautify": "1.10.0",
-    "node-sass": "4.12.0",
-    "xml-formatter": "1.1.0"
+    "node-sass": "4.12.0"
   }
 }
