--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,13 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-recommended",
+  "plugins": [
+    "stylelint-no-unsupported-browser-features"
+  ],
+  "rules": {
+    "plugin/no-unsupported-browser-features": [true, {
+      "severity": "warning",
+      "browsers": ["defaults", "iOS > 9", "IE 11"]
+    }],
+    "no-empty-source": null
+  }
 }
