--- a/package.json
+++ b/package.json
@@ -1,28 +1,44 @@
 {
   "name": "marcandregoyette.com",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Personal website of Marc-André Goyette",
-  "main": "sass/styles.scss",
+  "author": {
+    "name": "Marc-André Goyette",
+    "url": "https://marcandregoyette.com"
+  },
+  "private": true,
+  "homepage": "https://github.com/magoyette/magoyette.github.io",
+  "license": "EPL-2.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/magoyette/magoyette.github.io.git"
+    "url": "https://github.com/magoyette/magoyette.github.io.git"
   },
-  "author": "Marc-André Goyette",
-  "license": "EPL-2.0",
   "bugs": {
     "url": "https://github.com/magoyette/magoyette.github.io/issues"
   },
-  "homepage": "https://marcandregoyette.com",
+  "main": "sass/styles.scss",
   "scripts": {
-    "css-build": "node-sass --output-style compressed --omit-source-map-url sass/styles.scss resources/public/styles/styles.css",
-    "css-watch": "npm run css-build -- --watch",
-    "start": "npm run css-watch",
+    "build": "rm -drf ./resources/public && npx webpack",
+    "watch": "rm -drf ./resources/public && npx webpack --watch",
     "format-html": "node scripts/format-html.js"
   },
+  "browserslist": "defaults, iOS > 9, IE 11",
   "devDependencies": {
-    "bulma": "0.8.0",
-    "glob": "7.1.4",
-    "js-beautify": "1.10.2",
-    "node-sass": "4.12.0"
+    "autoprefixer": "^9.6.5",
+    "bulma": "^0.8.0",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
+    "glob": "^7.1.4",
+    "js-beautify": "^1.10.2",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.0",
+    "stylelint": "^11.1.1",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-no-unsupported-browser-features": "^3.0.2",
+    "stylelint-webpack-plugin": "^1.0.2",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   }
 }
