--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marcandregoyette.com",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "Personal website of Marc-André Goyette",
   "author": {
     "name": "Marc-André Goyette",
@@ -22,23 +22,23 @@
     "watch": "rm -drf ./resources/public && npx webpack --watch",
     "format-html": "node scripts/format-html.js"
   },
-  "browserslist": "defaults, iOS > 9, IE 11",
+  "browserslist": "defaults, iOS > 9",
   "devDependencies": {
-    "autoprefixer": "^9.7.4",
-    "bulma": "^0.8.0",
-    "css-loader": "^3.4.2",
-    "file-loader": "^5.0.2",
+    "autoprefixer": "^9.7.6",
+    "bulma": "^0.8.2",
+    "css-loader": "^3.5.2",
+    "file-loader": "^6.0.0",
     "glob": "^7.1.6",
-    "js-beautify": "^1.10.3",
+    "js-beautify": "^1.11.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
-    "stylelint": "^13.0.0",
+    "stylelint": "^13.3.3",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-no-unsupported-browser-features": "^4.0.0",
-    "stylelint-webpack-plugin": "^1.2.1",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.9"
+    "stylelint-webpack-plugin": "^1.2.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
