--- a/config.yaml
+++ b/config.yaml
@@ -2,22 +2,22 @@ baseURL: https://marcandregoyette.com/
 title: Marc-André Goyette
 theme: marcandregoyette
 # Languages
-defaultContentLanguage: fr
+defaultContentLanguage: en
 defaultContentLanguageInSubdir: true
 languages:
-  fr:
-    contentDir: content/fr
-    languageName: Français
-    weight: 1
   en:
     contentDir: content/en
     languageName: English
+    weight: 1
+  fr:
+    contentDir: content/fr
+    languageName: Français
     weight: 2
 # Taxonomies
 taxonomies:
   tag: tags
 # RSS
-languageCode: fr
+languageCode: en
 author:
     name: Marc-André Goyette
 # Markup
