--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marcandregoyette.com",
-  "version": "0.55.0",
+  "version": "0.56.0",
   "description": "Personal website of Marc-André Goyette",
   "author": {
     "name": "Marc-André Goyette",
@@ -28,19 +28,19 @@
   },
   "browserslist": "defaults, iOS > 9",
   "devDependencies": {
-    "autoprefixer": "^10.3.1",
+    "autoprefixer": "^10.4.2",
     "bulma": "^0.9.3",
-    "css-loader": "^6.2.0",
+    "css-loader": "^6.6.0",
     "fs-extra": "10.0.0",
-    "glob": "7.1.7",
-    "mini-css-extract-plugin": "^2.1.0",
-    "node-sass": "^6.0.1",
-    "postcss-loader": "^6.1.1",
-    "sass-loader": "^12.1.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0",
-    "stylelint-webpack-plugin": "^3.0.1",
-    "webpack": "^5.48.0",
-    "webpack-cli": "^4.7.2"
+    "glob": "7.2.0",
+    "mini-css-extract-plugin": "^2.5.3",
+    "sass": "^1.49.7",
+    "postcss-loader": "^6.2.1",
+    "sass-loader": "^12.4.0",
+    "stylelint": "^14.3.0",
+    "stylelint-config-recommended": "^6.0.0",
+    "stylelint-webpack-plugin": "^3.1.1",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2"
   }
 }
