--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marcandregoyette.com",
-  "version": "0.56.0",
+  "version": "0.57.0",
   "description": "Personal website of Marc-André Goyette",
   "author": {
     "name": "Marc-André Goyette",
@@ -16,31 +16,17 @@
   "bugs": {
     "url": "https://github.com/magoyette/magoyette.github.io/issues"
   },
-  "main": "sass/styles.scss",
-  "scripts": {
-    "clean:before": "node build-scripts/clean-before-build.js",
-    "clean:after": "node build-scripts/clean-after-build.js",
-    "build:webpack": "npm run clean:before && npx webpack",
-    "build": "npm run build:webpack && hugo && npm run clean:after",
-    "start": "npm run build:webpack && hugo server",
-    "watch": "npx webpack --watch",
-    "deploy": "npm run build && node build-scripts/deploy.js"
+  "config": {
+    "hugoVersion": "0.95.0"
   },
-  "browserslist": "defaults, iOS > 9",
+  "scripts": {
+    "postinstall": "./scripts/download-hugo.sh $npm_package_config_hugoVersion",
+    "clean": "rm -drf public",
+    "build": "npm run clean && ./hugo/hugo",
+    "start": "npm run clean && ./hugo/hugo server",
+    "export": "npm run build && ./scripts/export.sh"
+  },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "bulma": "^0.9.3",
-    "css-loader": "^6.6.0",
-    "fs-extra": "10.0.0",
-    "glob": "7.2.0",
-    "mini-css-extract-plugin": "^2.5.3",
-    "sass": "^1.49.7",
-    "postcss-loader": "^6.2.1",
-    "sass-loader": "^12.4.0",
-    "stylelint": "^14.3.0",
-    "stylelint-config-recommended": "^6.0.0",
-    "stylelint-webpack-plugin": "^3.1.1",
-    "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2"
+    "bulma": "0.9.3"
   }
 }
