--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "marcandregoyette.com",
-  "version": "0.63.0",
+  "name": "marcandregoyette",
+  "type": "module",
+  "version": "0.64.0",
   "description": "Personal website of Marc-André Goyette",
   "author": {
     "name": "Marc-André Goyette",
@@ -16,17 +17,33 @@
   "bugs": {
     "url": "https://github.com/magoyette/magoyette.github.io/issues"
   },
-  "config": {
-    "hugoVersion": "0.109.0"
-  },
   "scripts": {
-    "postinstall": "./scripts/download-hugo.sh $npm_package_config_hugoVersion",
-    "clean": "rm -drf public",
-    "build": "npm run clean && ./hugo/hugo",
-    "start": "npm run clean && ./hugo/hugo server",
-    "export": "npm run build && ./scripts/export.sh"
+    "dev": "astro check --watch & astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "check": "astro check",
+    "astro": "astro",
+    "format": "prettier --write './**/*.{astro,css,js,json,md,mdx,ts}'",
+    "lint": "eslint --fix --ext .js,.astro src"
+  },
+  "dependencies": {
+    "astro": "^2.1.2",
+    "@astrojs/mdx": "^0.18.0",
+    "@astrojs/rss": "^2.2.0",
+    "@astrojs/sitemap": "^1.2.0"
   },
   "devDependencies": {
-    "bulma": "0.9.4"
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "5.54.1",
+    "bulma": "0.9.4",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-astro": "0.23.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.4",
+    "prettier-plugin-astro": "0.8.0",
+    "sass": "1.58.3"
   }
 }
